Fix #35812: cycles image texture node not doing proper alpha handling of PNG images with open shading language enabled.